# SmartPropertyScraper

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
..bfg-report/2026-04-26/02-48-12/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
.dvc/: config
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
mlflow/: mlflow.db
mlruns/0/: meta.yaml
mlruns/828763867670088292/: meta.yaml
mlruns/828763867670088292/7c6f9bd88de941bcba8d088e292d7977/: meta.yaml
mlruns/828763867670088292/7c6f9bd88de941bcba8d088e292d7977/metrics/: optuna_best_val_rmse  train_mae  train_mape  train_r2  train_rmse  val_mae  val_mape  val_r2  val_rmse
mlruns/828763867670088292/7c6f9bd88de941bcba8d088e292d7977/outputs/m-6526d1a98dc948b098c0309cbdc2bfd8/: meta.yaml
mlruns/828763867670088292/7c6f9bd88de941bcba8d088e292d7977/params/: bagging_temperature
mlruns/828763867670088292/7c6f9bd88de941bcba8d088e292d7977/tags/: mlflow.runName
mlruns/828763867670088292/models/m-6526d1a98dc948b098c0309cbdc2bfd8/: meta.yaml
mlruns/828763867670088292/models/m-6526d1a98dc948b098c0309cbdc2bfd8/artifacts/: MLmodel  conda.yaml  input_example.json  model.cb  python_env.yaml  requirements.txt  serving_input_example.json
mlruns/828763867670088292/models/m-6526d1a98dc948b098c0309cbdc2bfd8/metrics/: optuna_best_val_rmse  train_mae  train_mape  train_r2  train_rmse  val_mae  val_mape  val_r2  val_rmse
mlruns/828763867670088292/models/m-6526d1a98dc948b098c0309cbdc2bfd8/params/: l2_leaf_reg  learning_rate
mlruns/828763867670088292/models/m-6526d1a98dc948b098c0309cbdc2bfd8/tags/: mlflow.modelVersions  mlflow.source.git.commit  mlflow.source.name
mlruns/models/realty-price-catboost/: meta.yaml
mlruns/models/realty-price-catboost/version-1/: meta.yaml
models/: catboost_model
src/realty_scraper/: __init__.py  backup.py  bot.py  cian.py  clean.py  clip_embeddings.py  domclick.py  images.py  index.py  llm.py  rag.py  s3_utils.py  schema.py  search.py  text_utils.py  train.py  web.py
