[project]
name = "realty-scraper"
version = "0.1.0"
description = "Сбор структурированных данных, описаний и фото объявлений недвижимости с domclick.ru"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "pandas>=3.0.2",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "dvc>=3.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/realty_scraper"]

