[project]
name = "realty-scraper"
version = "0.1.0"
description = "Сбор структурированных данных, описаний и фото объявлений недвижимости с domclick.ru"
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "boto3>=1.42.90",
    "catboost>=1.2",
    "dvc-s3>=3.3.0",
    "httpx>=0.28.1",
    "mlflow>=2.13",
    "optuna>=3.6",
    "pandas>=2.1.0,<3",
    "pandera[pandas]>=0.31.1",
    "pyarrow>=13.0.0,<23",
    "scikit-learn>=1.5",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "dvc>=3.67.1",
    # dvc-s3 устанавливается отдельно: `uv pip install "dvc[s3]"`
    # (конфликтует с резолвером uv из-за aiobotocore/botocore)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/realty_scraper"]

